--- a/DepartmentSelector/DepartmentSelector/DepartmentSelectorTester/DepartmentSelectorTester.vcxproj.filters
+++ b/DepartmentSelector/DepartmentSelector/DepartmentSelectorTester/DepartmentSelectorTester.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="StudentTester.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="TimeSegmentTester.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
