--- a/DepartmentSelector/DepartmentSelector/DepartmentSelector/DepartmentSelector.vcxproj
+++ b/DepartmentSelector/DepartmentSelector/DepartmentSelector/DepartmentSelector.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Student.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TimeSegment.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Department.cpp" />
@@ -162,6 +163,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Student.cpp" />
+    <ClCompile Include="TimeSegment.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
