--- a/DepartmentSelector/DepartmentSelector/DepartmentSelector/DepartmentSelector.vcxproj.filters
+++ b/DepartmentSelector/DepartmentSelector/DepartmentSelector/DepartmentSelector.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="TimeSegment.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DateGenerator.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="TimeSegment.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DateGenerator.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
